style/style.css
/* Global style  */
html{
    --main-bg-color: #fff;
    --second-bg-color: #ccc;
    --header-color: #CF2232;
    --text-color: #1A1A1D;
    --nav-color: #1A1A1D;
    --btn-color: #930740;
    --btn-hover-color: #C3073F;
    --main-transition: .3s;
    --scrollbar-color: #ccc;
    --scrollbar-track-color: #fff;
}
html[data-theme='dark']{
    --main-bg-color: #1A1A1D;
    --second-bg-color: #9507404a;
    --header-color: #C3073F;
    --text-color: #fff;
    --nav-color: #fff;
    --scrollbar-color: #C3073F;
    --scrollbar-track-color: #1A1A1D;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

body::-webkit-scrollbar {
    width: 10px;
}
body {
    font-family: 'Lato', sans-serif;
    background-color: var(--main-bg-color);
    color: var(--text-color);
    transition: var(--main-transition);
    scrollbar-color: var(--scrollbar-color) var(--scrollbar-track-color);
}
body::-webkit-scrollbar-track {
    background: var(--scrollbar-track-color);
}
body::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-color);
    border-radius: 0px;
    border: 3px solid var(--scrollbar-track-color);
}

.container {
    padding-left: 15px;
    padding-right: 15px;
    margin: 0 auto;
    overflow-x: hidden;
}

html {
    scroll-behavior: smooth;
}

a {
    text-decoration: none;
}
a:visited {
    color: inherit;
}

ul {
    list-style: none;
}

/* medium */
@media screen and (min-width: 768px) {
    .container {
        width: 720px;
    }
}

/* large */
@media screen and (min-width: 992px) {
    .container {
        width: 960px;
    }
}

/* X large */
@media screen and (min-width: 1200px) {
    .container {
        width: 1140px;
    }
}

/* XX large  */
@media screen and (min-width: 1400px) {
    .container {
        width: 1320px;
    }
}

/* start Top bar  */
.top-bar {
    overflow: hidden;
}
.top-bar .container {
    height: 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.top-bar .logo h1 {
    font-family: 'Raleway', sans-serif;
    cursor: pointer;
    transition: var(--main-transition);
    color: var(--header-color);
    text-shadow: 2px 1px var(--header-color);
}
.top-bar .logo h1:hover {
    text-shadow: none;
}
.top-bar .m-t {
    display: flex;
    align-items: center;
    gap: 30px;
    color: var(--nav-color);
}
.top-bar .theme-icon button {
    background-color: transparent;
    border-radius: 50%;
    border: none;
    cursor: pointer;
    color: var(--nav-color);
}

.top-bar .menu {
    transform: translate(0%, 0%);
}
.top-bar .menu ul {
    display: flex;
    gap: 30px;
    height: 50px;
    align-items: center;
}
.top-bar .menu ul li {
    font-size: 13px;
    font-weight: 600;
    position: relative;
}
.top-bar .menu ul li a {
    color: inherit;
}
.top-bar .menu ul li:not(:last-child)::after {
    content: "";
    position: absolute;
    left: -2px;
    bottom: -5px;
    width: 0;
    height: 2px;
    background-color: var(--text-color);
    transition: var(--main-transition);
}
.top-bar .menu ul li:hover::after {
    width: 110%;
}
.top-bar .menu ul li i {
    font-size: 18px;
}
.top-bar .menu-icon {
    display: none;
    flex-direction: column;
    width: 25px;
    gap: 5px;
}
.top-bar .menu-icon .line {
    display: block;
    width: 100%;
    background-color: var(--text-color);
    height: 3px;
    transition: .3s;
}

@media screen and (max-width: 430px) {
    .top-bar .menu-icon {
        display: flex;
    }
    .top-bar .menu {
        z-index: 1;
        position: absolute;
        left: 50%;
        top: 60px;
        transform: translate(-50%, -50%);
        opacity: 0;
        visibility: hidden;
        transition: var(--main-transition);
    }
}

/* End Top bar  */
/* Start Home */
.home .container {
    height: calc(100vh - 80px);
}
.home .container .text {
    padding-top: 100px;
    text-align: center;
    width: 100%;
    opacity: 0;
    transition: 3s;
    transform: translateY(-50px);
}
.home .container .text h1 {
    font-size: 4rem;

    margin: 0;
    padding-bottom: 20px;
}
.home .container .text p {
    text-align: center;
    font-size: 20px;
}
.home .container .text h1 span {
    font-family: 'Raleway', sans-serif;
    color: var(--header-color);
}
.home .arrow-down {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 70px;
    font-size: 18px;
    animation: bounce 1s infinite;
}
/* arrow animation  */
@keyframes bounce {
    0% {transform: translate(-50%, 0px);}
    50% {transform: translate(-50%, 10px);}
    100% {transform: translate(-50%, 0px);}
}
/* End Home */
/* Header component  */
.show {
    transform: translateX(0) !important;
    opacity: 1 !important;
}
.header {
    text-align: center;
    padding-bottom: 100px;
    transform: translateY(-100px);
    opacity: 0;
    transition: all .5s ease;
    transition-delay: 0.2s;

}
.header .title {
    position: relative;
}
.header .title::after {
    content: '';
    left: 50%;
    bottom: -15px;
    position: absolute;
    transform: translateX(-50%);
    height: 2px;
    width: 20%;
    background-color: var(--header-color);
}
.header h1 {
    position: relative;
    color: var(--header-color);
}
.header p {
    line-height: 1.5;
    padding-top: 15px;
}
/* btn component  */
.btn-1 {
    padding: 10px 20px;
    background-color: var(--btn-color);
    border: none;
    position: relative;
    overflow: hidden;
    cursor: pointer;
    z-index: 1;
    
}
.btn-1 span {
    color: #fff;
    font-size: 18px;
    font-weight: 600;
    font-family: 'Raleway', sans-serif;
    transition: var(--main-transition);
}
.btn-1::after {
    content: "";
    position: absolute;
    left: -6px;
    top: 0;
    height: 100%;
    width: 0;
    background-color: var(--btn-hover-color);
    transform: skewX(-18deg);
    transition: var(--main-transition);
    z-index: -1;
}
.btn-1:hover::after {
    width: 115%;
}
/* Start About  */
.about {
    padding-top: 50px;
    padding-bottom: 100px;
    background-color: var(--second-bg-color);
}
.about .info-skills {
    display: flex;
    gap: 50px;
}
.about .info-skills .info {
    width: 100%;
    transform: translateX(-400%);
    transition: transform .5s ease;
    transition-delay: .4s;
}
.about .info-skills .info h3 {
    padding-bottom: 15px;
    color: var(--header-color);
}
.about .info-skills .info p {
    line-height: 1.6;
    padding: 10px 0;
    width: 90%;
}
.about .info-skills .info p:last-of-type{
    margin-bottom: 30px;
}
.info-skills .info .btn {
    display: flex;
}
.about .info-skills .skills{
    width: 100%;
    transform: translateX(400%);
    transition: transform .5s ease;
    transition-delay: .6s;
}
.about .info-skills .skills h3 {
    padding-bottom: 30px;
    color: var(--header-color);
}
.about .info-skills .skills ul {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}
.about .info-skills .skills ul li {
    padding: 10px 20px;
    background-color: #EDF5E1;
    color: #1A1A1D;
}
@media screen and (max-width: 767px) {
    .about .info-skills {
        flex-direction: column;
    }
}


/* End About  */
/* Start work  */
.work {
    padding-top: 50px;
    padding-bottom: 100px;
}

.work .work-container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    flex-wrap: wrap;
    gap: 10px;
}
.work .work-container .content {
    flex: 0 1 calc(100% / 3 - 20px);
}
.work .work-container .content {
    position: relative;
    height: auto;
    transform: translateX(400%);
    transition: transform .5s ease;
}
.work .work-container .content:nth-child(1) {
    transition-delay: .4s;
}
.work .work-container .content:nth-child(2) {
    transition-delay: .6s;
}
.work .work-container .content:nth-child(3) {
    transition-delay: .8s;
}

.work .work-container .content:hover .btn {
    display: block;
}
.work .work-container .content:hover .img {
    filter: blur(5px);
}
.work .work-container .content .img {
    width: 100%;
    transition: var(--main-transition);
    height: 100%;
}
.work .work-container .content .img img {
    max-width: 100%;
}
.work .work-container .btn {
    display: none;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    transition: var(--main-transition);
}
.work .work-container .btn a {
    padding: 15px 25px;
    border-radius: 25px;
    border: none;
    background-color: var(--btn-color);
    color: #fff;
    display: flex;
    align-items: center;
    gap: 10px;
    cursor: pointer;
    text-transform: capitalize;
}
@media screen and (max-width: 768px) {
    .work .work-container .content {
        flex: 0 1 calc(100% / 2 - 20px) !important;
    }
    .work .work-container {
        gap: 20px;
    }
}
@media screen and (max-width: 579px) {
    .work .work-container .content {
        flex: 1 0 100% !important;
    }
}

/* End work */
/* Start contact */
.contact {
    padding-bottom: 100px;
    padding-top: 50px;
    background-color: var(--second-bg-color);
}
.contact .container {
    overflow-y: hidden;
}
.contact .icon {
    display: flex;
    justify-content: center;
    font-size: 5rem;
    padding-bottom: 20px;
    transform: translateY(-100px);
    opacity: 0;
    transition: all .5s ease;
    transition-delay: 0.2s;
}
.contact .contact-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    transform: translateY(100px);
    opacity: 0;
    transition: all .5s ease;
}
.contact .icon i {
    font-size: 5rem;
}
/* End contact */
/* Start footer  */
footer:first-of-type{
    padding: 30px 0;
}
footer .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    text-align: center;
    overflow-y: hidden;
}
footer .logo {
    font-family: 'Raleway', sans-serif;
    cursor: pointer;
    transition: var(--main-transition);
    text-shadow: 2px 1px var(--header-color);
    color: var(--header-color);
}
footer .logo:hover {
    text-shadow: none;
}
footer .text {
    font-size: 1.3rem;
    padding-right: 30px;
}
footer .icon {
    font-size: 2rem;
    animation: bounce 1s infinite;
    width: 15px;
    color: var(--header-color);
    height: 45px;

}
footer .c-r {
    text-align: center;
    padding: 20px 0;
    width: 350px;
    margin: 0 auto;
    border-top: 3px solid var(--header-color);
    font-size: 12px;
}
footer .c-r span {
    color: #fff;
    background-color: var(--header-color);
    padding: 5px 10px;
}
@media screen and (max-width: 579px) {
    footer .container {
        flex-direction: column;
    }
    footer .text {
        padding: 0;
        padding-bottom: 20px;
    }
}
/* End footer  */

